# Copyright 2021 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build_overrides/pigweed.gni")
import("$dir_pw_build/target_types.gni")

config("public_include_path") {
  include_dirs = [ "public" ]
}

pw_source_set("icu") {
  sources = [
    "icu_utf.cc",
    "public/icu/icu_utf.h",
  ]

  public_configs = [ ":public_include_path" ]
}
